Route backend update logout me