@@ -7,6 +7,7 @@ import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 
 @Entity
 @Table(name = "users")
@@ -37,8 +38,9 @@ public class User implements UserDetails {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // Tu peux gérer les rôles ici si besoin
+        return List.of(() -> "ROLE_" + role); // Exemple : "ROLE_ADMIN"
     }
+
 
     @Override
     public String getPassword() {
